# Mangadex-Sync

./: README.md
pypi pkg/: .gitignore  README.md  pyproject.toml
pypi pkg/mangadex_sync/: __init__.py  app.py
standalone/: mangadex_sync.py  requirements.txt
